--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Automat==22.10.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.6.2
-cffi==1.16.0
+cffi>=1.17.1
 charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==42.0.8
@@ -21,11 +21,11 @@ itemadapter==0.9.0
 itemloaders==1.3.1
 jmespath==1.0.1
 lxml==5.2.2
-numpy==2.0.0
+numpy>=1.26.4,<2.0.0
 openpyxl==3.1.4
 outcome==1.3.0.post0
 packaging==24.1
-pandas==2.2.2
+pandas>=2.0.0
 parsel==1.9.1
 Protego==0.3.1
 pyasn1==0.6.0
